# Ancora

./: .commitlintrc.yml  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  codecov.yml  mkdocs.yml
crates/ancora-adv-integration/: Cargo.toml
crates/ancora-adv-integration/src/: lib.rs
crates/ancora-advbench/: Cargo.toml
crates/ancora-advbench/src/: harness.rs  lib.rs  result.rs  thresholds.rs
crates/ancora-advpar/: Cargo.toml
crates/ancora-advpar/src/: lib.rs
crates/ancora-audit/: Cargo.toml
crates/ancora-audit/examples/: basic_audit.rs
crates/ancora-audit/src/: builder.rs  display.rs  entry.rs  error.rs  export.rs  lib.rs  log.rs  query.rs  retention.rs  stats.rs  tenant_summary.rs
crates/ancora-autoscale/: Cargo.toml
crates/ancora-autoscale/src/: bounds.rs  cooldown.rs  decision.rs  lib.rs  metrics.rs  perf.rs  policy.rs  signals.rs  simulator.rs  tenant_policy.rs
crates/ancora-cli/: Cargo.toml
crates/ancora-cli/src/: cli.rs  lib.rs  main.rs  spec.rs  store.rs  studio.rs  trace.rs
crates/ancora-cli/tests/: integration.rs  studio_integration.rs
crates/ancora-compliance/: Cargo.toml
crates/ancora-compliance/examples/: basic_compliance.rs
crates/ancora-compliance/src/: assessment.rs  audit.rs  control.rs  evidence.rs  export.rs  framework.rs  gap.rs  lib.rs  presets.rs  query.rs  registry.rs  report.rs  stats.rs
crates/ancora-controlplane/: Cargo.toml
crates/ancora-controlplane/src/: auth.rs  cost.rs  filters.rs  journal_api.rs  lib.rs  model.rs  pagination.rs  resume.rs  scheduler.rs  store.rs
crates/ancora-core/: Cargo.toml
crates/ancora-core/benches/: engine_bench.rs  journal_bench.rs  overhead_bench.rs
crates/ancora-core/docs/: conformance.md
crates/ancora-core/src/: activity.rs  agent.rs  cancel.rs  conformance.rs  cost.rs  error.rs  eval.rs  eval_metrics.rs  eval_report.rs  eval_runner.rs  eval_semantic.rs  executor.rs  fixture.rs  graph.rs  idempotency.rs  journal.rs  journal_mask.rs  lib.rs  output.rs  postgres.rs  replay.rs  retry.rs  routing.rs  run.rs  spans.rs  sqlite.rs  stream.rs  suspend.rs
crates/ancora-core/tests/: activity_concurrency_tests.rs  audit_api_reference.rs  audit_changelog.rs  audit_code_samples.rs  audit_concept_cross_refs.rs  audit_contributing_guide.rs  audit_doc_completeness.rs  audit_doc_freshness.rs  audit_doc_link_integrity.rs  audit_doc_word_count.rs  audit_examples_in_docs.rs  audit_faq.rs  audit_glossary_terms.rs  audit_migration_guides.rs  audit_no_placeholder_content.rs  audit_provider_docs.rs  audit_quickstart_coverage.rs  audit_readme_sections.rs  audit_sdk_doc_completeness.rs  audit_troubleshooting.rs  bench_a2a_envelope.rs  bench_checkpoint.rs  bench_concurrent_journals.rs  bench_cost_computation.rs  bench_divergence_check.rs  bench_event_dispatch.rs  bench_hil_gate.rs  bench_journal_write.rs  bench_json_serialise.rs  bench_memory_tier.rs  bench_otel_spans.rs  bench_parallel_join.rs  bench_policy_check.rs  bench_replay_speed.rs  bench_structured_output.rs  bench_token_stream.rs  bench_vector_insert.rs  bench_vector_search.rs  cancel_tests.rs  chaos_clock_skew.rs  (+187 more)
crates/ancora-dataclass/: Cargo.toml
crates/ancora-dataclass/examples/: basic_dataclass.rs
crates/ancora-dataclass/src/: audit.rs  builder.rs  downgrade.rs  enforcer.rs  export.rs  label.rs  lib.rs  policy.rs  query.rs  record.rs  redact.rs  registry.rs  stats.rs
crates/ancora-examples/: COST_OTEL.md  Cargo.toml  DURABLE_RESTART.md  GLM_LLAMA_EDGE.md  HUMAN_IN_LOOP.md  MCP_TOOL.md  MULTI_AGENT_VERIFIER.md  RAG_LANCEDB.md  README.md  SINGLE_AGENT.md  STREAMING_CHAT.md  STRUCTURED_OUTPUT.md
crates/ancora-examples/src/: advanced_combined.rs  agent_eval_harness.rs  background_agent.rs  contract_net_example.rs  guarded_tool_synthesis.rs  lib.rs  long_running_memory.rs  skills_subagent.rs  verified_reasoning.rs
crates/ancora-examples/tests/: cost_otel.rs  durable_restart.rs  glm_llama_edge.rs  human_in_loop.rs  mcp_tool.rs  multi_agent_verifier.rs  rag_lancedb.rs  run_all_examples.rs  single_agent.rs  streaming_chat.rs  structured_output.rs  token_estimator.rs
crates/ancora-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/ancora-ffi/benches/: ffi_bench.rs
crates/ancora-ffi/docs/: abi-versioning.md  native-artifacts.md
crates/ancora-ffi/include/: ancora.h
crates/ancora-ffi/src/: buffer.rs  error_code.rs  handles.rs  lib.rs  memory_backend.rs  memory_ops.rs  model_client.rs  run_id.rs  run_ops.rs  runs.rs  runtime.rs  spec_decode.rs  tool_callback.rs  tool_dispatch.rs  tool_ops.rs  tool_registry.rs  version.rs
crates/ancora-ffi/tests/: abi_snapshot_test.rs  conformance_tests.rs  ffi_tests.rs  handle_tests.rs  human_in_loop_tests.rs  run_ops_tests.rs  tool_callback_tests.rs
crates/ancora-fleet/: Cargo.toml
crates/ancora-fleet/docs/: airgap-fleet-operations.md  edge-fleet-management.md  model-distribution.md
crates/ancora-fleet/src/: airgap.rs  config_push.rs  dashboard.rs  decommission.rs  inventory.rs  lib.rs  model_dist.rs  policy.rs  registration.rs  rollout.rs  telemetry.rs
crates/ancora-grpc/: Cargo.toml  build.rs
crates/ancora-grpc/proto/: ancora.proto
crates/ancora-grpc/src/: agent_card.rs  auth.rs  client.rs  handoff.rs  identity.rs  lib.rs  service.rs  store.rs  task.rs  tls.rs
crates/ancora-grpc/tests/: a2a_client_tests.rs  a2a_tests.rs  auth_tests.rs  polyglot_handoff_tests.rs  service_tests.rs
crates/ancora-hsm/: Cargo.toml
crates/ancora-hsm/examples/: basic_hsm.rs
crates/ancora-hsm/src/: audit.rs  builder.rs  key.rs  lib.rs  mock.rs  (+6 more)
crates/ancora-incident/: Cargo.toml
crates/ancora-inference/: Cargo.toml
crates/ancora-keymgmt/: Cargo.toml
crates/ancora-memory/: Cargo.toml
crates/ancora-milestone/: Cargo.toml
crates/ancora-napi/: Cargo.toml
crates/ancora-netpol/: Cargo.toml
crates/ancora-observability/: Cargo.toml
crates/ancora-ondev/: Cargo.toml
crates/ancora-operator/: Cargo.toml
crates/ancora-proto/: Cargo.toml  build.rs
crates/ancora-py/: Cargo.toml
crates/ancora-quant/: Cargo.toml
crates/ancora-redteam/: Cargo.toml
(+4197 files in other folders)
