[workspace]
resolver = "2"
members = [
    "crates/ancora-proto",
    "crates/ancora-core",
    "crates/ancora-inference",
    "crates/ancora-memory",
    "crates/ancora-tools",
    "crates/ancora-policy",
    "crates/ancora-observability",
    "crates/ancora-cli",
    "crates/ancora-ffi",
    "crates/ancora-grpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/YASSERRMD/Ancora"
