[workspace]
resolver = "2"
members = [
    "crates/ancora-proto",
    "crates/ancora-core",
    "crates/ancora-controlplane",
    "crates/ancora-worker",
    "crates/ancora-autoscale",
    "crates/ancora-operator",
    "crates/ancora-multitenancy",
    "crates/ancora-quota",
    "crates/ancora-backup",
    "crates/ancora-dr",
    "crates/ancora-deploy",
    "crates/ancora-config",
    "crates/ancora-metrics",
    "crates/ancora-alerting",
    "crates/ancora-logging",
    "crates/ancora-cost",
    "crates/ancora-opscli",
    "crates/ancora-selfheal",
    "crates/ancora-migrate",
    "crates/ancora-loadtest",
    "crates/ancora-runbook",
    "crates/ancora-toolcall",
    "crates/ancora-inference",
    "crates/ancora-memory",
    "crates/ancora-tools",
    "crates/ancora-policy",
    "crates/ancora-observability",
    "crates/ancora-cli",
    "crates/ancora-ffi",
    "crates/ancora-grpc",
    "crates/ancora-py",
    "crates/ancora-napi",
    "crates/ancora-examples",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/YASSERRMD/Ancora"
