[workspace]
resolver = "2"
members = [
    "crates/ancora-proto",
    "crates/ancora-core",
    "crates/ancora-controlplane",
    "crates/ancora-worker",
    "crates/ancora-autoscale",
    "crates/ancora-operator",
    "crates/ancora-multitenancy",
    "crates/ancora-quota",
    "crates/ancora-backup",
    "crates/ancora-dr",
    "crates/ancora-deploy",
    "crates/ancora-config",
    "crates/ancora-metrics",
    "crates/ancora-alerting",
    "crates/ancora-logging",
    "crates/ancora-cost",
    "crates/ancora-opscli",
    "crates/ancora-selfheal",
    "crates/ancora-migrate",
    "crates/ancora-loadtest",
    "crates/ancora-runbook",
    "crates/ancora-toolcall",
    "crates/ancora-structured",
    "crates/ancora-agentmem",
    "crates/ancora-orchestrate",
    "crates/ancora-memcon",
    "crates/ancora-toolsynth",
    "crates/ancora-skills",
    "crates/ancora-lh",
    "crates/ancora-coord",
    "crates/ancora-guard",
    "crates/ancora-reason",
    "crates/ancora-ageval",
    "crates/ancora-adv-integration",
    "crates/ancora-advdet",
    "crates/ancora-redteam",
    "crates/ancora-advpar",
    "crates/ancora-preset",
    "crates/ancora-auth",
    "crates/ancora-rbac",
    "crates/ancora-abac",
    "crates/ancora-audit",
    "crates/ancora-tenant",
    "crates/ancora-secrets",
    "crates/ancora-netpol",
    "crates/ancora-dataclass",
    "crates/ancora-compliance",
    "crates/ancora-keymgmt",
    "crates/ancora-secboot",
    "crates/ancora-supplychain",
    "crates/ancora-incident",
    "crates/ancora-threatintel",
    "crates/ancora-zerotrust",
    "crates/ancora-hsm",
    "crates/ancora-airgap",
    "crates/ancora-pentest",
    "crates/ancora-redteam2",
    "crates/ancora-enterprise",
    "crates/ancora-advbench",
    "crates/ancora-milestone",
    "crates/ancora-inference",
    "crates/ancora-memory",
    "crates/ancora-tools",
    "crates/ancora-policy",
    "crates/ancora-observability",
    "crates/ancora-cli",
    "crates/ancora-ffi",
    "crates/ancora-grpc",
    "crates/ancora-py",
    "crates/ancora-napi",
    "crates/ancora-examples",
    "crates/ancora-trace",
    "crates/ancora-evals",
    "crates/ancora-evalrun",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["YASSERRMD <arafath.yasser@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/YASSERRMD/Ancora"
