[package]
name    = "ancora-advbench"
version = "0.1.0"
edition = "2021"

[dependencies]
ancora-orchestrate = { path = "../ancora-orchestrate" }
ancora-memcon      = { path = "../ancora-memcon" }
ancora-toolsynth   = { path = "../ancora-toolsynth" }
ancora-skills      = { path = "../ancora-skills" }
ancora-lh          = { path = "../ancora-lh" }
ancora-coord       = { path = "../ancora-coord" }
ancora-guard       = { path = "../ancora-guard" }
ancora-reason      = { path = "../ancora-reason" }
ancora-ageval      = { path = "../ancora-ageval" }
serde_json         = "1"
