[package]
name = "ancora-autoscale"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Horizontal autoscaling policy engine for Ancora worker pools"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
