[package]
name = "ancora-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference CLI runtime for Ancora"
default-run = "ancora"

[[bin]]
name = "ancora"
path = "src/main.rs"

[dependencies]
ancora-core = { path = "../ancora-core", features = ["sqlite"] }
ancora-inference = { path = "../ancora-inference" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
