[package]
name = "ancora-controlplane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control plane API for Ancora: run and worker management at scale"

[dependencies]
ancora-core = { path = "../ancora-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
