[package]
name = "ancora-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for Ancora: agent loop, graph, journal, replay, retry"

[dependencies]
ancora-proto = { path = "../ancora-proto" }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }

[features]
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3.27.0"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "journal_bench"
harness = false

[[bench]]
name = "overhead_bench"
harness = false

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]
optional = true

[dependencies.postgres]
version = "0.19"
optional = true
