[package]
name = "ancora-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI surface for the Ancora agent runtime"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ancora-core = { path = "../ancora-core", version = "0.6.0" }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ffi_bench"
harness = false

[build-dependencies]
cbindgen = "0.26"
