[package]
name = "ancora-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
ancora-core = { path = "../ancora-core" }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tonic = { version = "0.12", features = ["tls"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
tonic-build = "0.12"
