[package]
name = "ancora-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
ancora-core = { path = "../ancora-core", version = "0.6.0" }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
tonic = { version = "0.12", features = ["tls"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
