[package]
name = "ancora-inference"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model-agnostic inference adapter traits for Ancora"

[dependencies]
thiserror = "2"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
