[package]
name = "ancora-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Composable memory tiers for Ancora agents"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
ureq = { version = "2", optional = true }

[features]
default = []
pgvector = ["serde", "tokio", "tokio-postgres"]
qdrant = ["serde", "ureq"]
