[package]
name = "ancora-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Composable memory tiers for Ancora agents"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"], optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
pgvector = { version = "0.4", features = ["postgres"], optional = true }
ureq = { version = "2", features = ["json"], optional = true }

[features]
default = []
pgvector = ["dep:pgvector", "serde", "tokio", "tokio-postgres"]
qdrant = ["serde", "ureq"]
weaviate = ["serde", "ureq"]
milvus = ["serde", "ureq"]
lancedb = ["serde"]
chroma = ["serde", "ureq"]
pinecone = ["serde", "ureq"]
vespa = ["serde", "ureq"]
redis-vector = ["serde", "ureq"]
openai-embed = ["ureq"]
