[package]
name = "ancora-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenTelemetry GenAI span emission for Ancora"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
