[package]
name = "ancora-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CRD-driven Kubernetes operator for Ancora clusters and tenants"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
