[package]
name = "ancora-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protobuf wire spec and generated types for Ancora"

[dependencies]
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
