[package]
name = "ancora-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 Python bindings for the Ancora agent runtime"

[lib]
name = "ancora"
crate-type = ["cdylib"]

[dependencies]
ancora-core = { path = "../ancora-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
uuid = { version = "1", features = ["v4"] }
