[package]
name = "ancora-redteam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Adversarial red-team harness for scoring guardrail effectiveness against known attacks"
publish = false

[dependencies]
ancora-guard = { path = "../ancora-guard" }
serde_json = "1"

[dev-dependencies]
